--- a/.env.example
+++ b/.env.example
@@ -11,5 +11,8 @@ REDIS_PORT=6379
 REDIS_PASSWORD=
 REDIS_DB=0
 
+# JWT
+JWT_SECRET=your-secret-key-change-in-production
+
 # Environment
 ENV=development
