feat: implement bucket management
- Added bucket creation, listing, retrieval, and deletion functionalities.
- Introduced validation for bucket names and ensured deduplication of resources.
- Implemented public access for buckets with symlink creation.
- Created DTOs for bucket requests and responses.
- Established repository and service layers for bucket management.
- Integrated health check endpoints for service readiness.
- Documented API endpoints using Swagger annotations.

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,9 @@ HOST=0.0.0.0
 # Database (SQLite)
 DATABASE_PATH=./data/aoui-drive.db
 
+# Storage
+STORAGE_PATH=./data/storage
+
 # Redis
 REDIS_HOST=localhost
 REDIS_PORT=6379
